--- a/styles/main.css
+++ b/styles/main.css
@@ -5,3 +5,13 @@ ul, li {
 .item-list {
   cursor: pointer;
 }
+
+.deleteButton {
+  background: none;
+  padding: 8px;
+  margin: 8px;
+  color: red;
+  border: none;
+  font-weight: bold;
+  font-size: 20px;
+}
