--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,48 @@
-ul, li {
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  margin: 30px;
+}
+
+.container-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px;
+}
+
+.container-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+input {
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+}
+
+.container-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+ul,
+li {
   list-style-type: none;
 }
 
@@ -13,5 +57,6 @@ ul, li {
   color: red;
   border: none;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
+  cursor: pointer;
 }
